[package]
name = "serde-opml"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "serde-opml "
repository = "https://github.com/serde-opml/serde-opml"
homepage = "https://github.com/serde-opml/serde-opml"
authors = ["ahaoboy"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
